--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-tensorflow==2.7.0
-keras==2.7.0
-streamlit==1.2.0
-opencv-python-headless==4.5.5.62
+streamlit==1.32.0
+tensorflow==2.16.1  # Latest available version for Python 3.11
+opencv-python-headless==4.9.0.80
+numpy==1.26.4
+protobuf==3.20.3
+scipy==1.11.4
