--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,9 @@ opencv-python-headless==4.9.0.80
 numpy==1.26.4
 protobuf==3.20.3
 scipy==1.11.4
+fastapi==0.108.0
+uvicorn==0.25.0
+python-multipart==0.0.6
+pydantic==2.5.2
+starlette==0.31.1
+typing-extensions==4.9.0
